@@ -193,6 +193,7 @@ void gridFree(Grid *g);
 
 Grid *gridWriteTecplotSurfaceZone(Grid *g, char *filename );
 Grid *gridWriteTecplotCellZone(Grid *g, int *nodes, char *filename );
+Grid *gridCloseTecplotFile(Grid *g);
 
 #define gridMaxNode(grid) (grid->maxnode)
 #define gridNNode(grid)   (grid->nnode)
